--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+backend/node_modules
 dist
 dist-ssr
 *.local
@@ -24,5 +25,5 @@ dist-ssr
 *.sw?
 
 # Environment variables
-.env
-.env.local
+backend/.env
+.env.*
